--- a/MyZhiHuWeb/MyZhiHuWeb.csproj
+++ b/MyZhiHuWeb/MyZhiHuWeb.csproj
@@ -16,6 +16,8 @@
     <ItemGroup>
       <PackageReference Include="AntDesign" Version="0.20.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="Syncfusion.Blazor.RichTextEditor" Version="26.2.11" />
+      <PackageReference Include="Syncfusion.Blazor.Themes" Version="26.2.11" />
       <PackageReference Include="UEditorBlazor" Version="1.0.2" />
     </ItemGroup>
 
